[package]
name        = "qvnt"
version     = "0.3.3"
description = "Advanced quantum computation simulator."
keywords    = ["theoretical", "quantum-computing", "quantum-simulator", "quantum", "qubits", ]
categories  = ["concurrency", "simulation", "mathematics", "science", ]

authors     = ["Denis Drozhzhin <denisdrozhzhin1999@gmail.com>"]
edition     = "2018"
repository  = "https://github.com/MucTepDayH16/qvnt/"
readme      = "README.md"
license     = "MIT OR Apache-2.0"

[features]
default     = []
cpu         = ["rayon", "lazy_static"]

[dependencies]
lazy_static = { version = "1.4.0", optional = true }
num-complex = "0.4.0"
float-cmp   = { version = "0.8.0", optional = true }
rand        = "0.8.4"
rand_distr  = "0.4.3"
rayon       = { version = "1.5.1", optional = true }
enum_dispatch = "0.3.8"

[dev-dependencies]
criterion   = "0.3.5"

[[bench]]
name        = "performance"
harness     = false
required-features = ["cpu"]