[package]
name                = "qvnt"
version             = "0.5.0-alpha"
description         = "Advanced quantum computation simulator."
keywords            = ["theoretical", "quantum-computing", "quantum-simulator", "quantum", "qubits"]
categories          = ["concurrency", "simulation", "mathematics", "science"]

authors             = ["Denis Drozhzhin <denisdrozhzhin1999@gmail.com>"]
edition             = "2018"
repository          = "https://github.com/MucTepDayH16/qvnt/"
readme              = "README.md"
license             = "Apache-2.0"

[dependencies]
num-complex         = "0.4.2"
float-cmp           = "0.9.0"
rand                = "0.8.5"
rand_distr          = "0.4.3"
rayon               = { version = "1.5.3", optional = true }
enum_dispatch       = "0.3.8"
qasm                = { package = "qvnt-qasm", version = "0.2.0", optional = true, features = ["no-check-ver"] }
meval               = { version = "0.2.0", optional = true }

[dev-dependencies]
criterion           = { version = "0.4.0", features = ["html_reports"] }
test-case           = "2.2.1"

[features]
default             = []
multi-thread        = ["rayon"]
interpreter         = ["qasm", "meval"]

[[bench]]
name                = "performance"
harness             = false
required-features   = ["multi-thread"]
